fix: name and email input overflow

--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ label {
 
 .form-row {
     display: flex;
+    justify-content: flex-start;
+    /* flex-direction: column; */
+    flex-wrap: wrap;
 }
 
 textarea {
